# Prime_Intellect_Environments

./: README.md  pyproject.toml  run_blicket_test_env_evals.sh  run_causal_explorer_env_evals.sh  run_causal_reasoning_env_evals.sh
environments/CausalExplorerEnv/: CausalExplorerEnv.py  README.md  plan.md  pyproject.toml
environments/CausalExplorerEnv/outputs/evals/CausalExplorerEnv--allenai--olmo-3-7b-instruct/5cac10a2/: metadata.json  results.jsonl
environments/CausalExplorerEnv/outputs/evals/CausalExplorerEnv--allenai--olmo-3-7b-instruct/7e9f7484/: metadata.json  results.jsonl
environments/CausalExplorerEnv/outputs/evals/CausalExplorerEnv--allenai--olmo-3-7b-instruct/e5bd4d5b/: metadata.json
environments/CausalExplorerEnv/outputs/evals/CausalExplorerEnv--allenai--olmo-3.1-32b-instruct/4394e322/: metadata.json  results.jsonl
environments/CausalExplorerEnv/outputs/evals/CausalExplorerEnv--allenai--olmo-3.1-32b-instruct/85ce6cde/: metadata.json
environments/CausalExplorerEnv/outputs/evals/CausalExplorerEnv--meta-llama--llama-3.1-70b-instruct/138340b4/: metadata.json  results.jsonl
environments/CausalExplorerEnv/outputs/evals/CausalExplorerEnv--openai--gpt-5.1-chat/15ed1254/: metadata.json  (+1 more)
environments/CausalReasoningEnv_1/: CausalReasoningEnv_1.py  README.md  pyproject.toml
environments/CausalReasoningEnv_1/datasets/eval/: data-00000-of-00001.arrow  state.json
environments/CausalReasoningEnv_1/datasets/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
environments/CausalReasoningEnv_1/misc/: analyze_dataset.py  filter_eval_results.py
(+13 files in other folders)
