[project]
name = "CausalExplorerEnv"
description = "Multi-turn causal reasoning environment where an LLM explores a Blicket-detecting machine to identify which objects activate it under a hidden rule"
tags = ["multi-turn", "causal-reasoning", "eval", "train"]
version = "0.1.7"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.9.post3",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["CausalExplorerEnv.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 1
