[project]
name = "CausalReasoningEnv_1"
description = "Tool environment for causal reasoning: given a random DAG with treatment and outcome nodes, identify the minimal adjustment set needed to block all backdoor paths."
tags = ["reasoning", "causal-reasoning", "graph-reasoning", "single-turn", "train", "eval"]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.9.post3",
    "networkx>=3.0",
    "matplotlib>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["CausalReasoningEnv_1.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 1
